<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".contacts.HomeActivityKotlin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="@color/white" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">


                  </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                tools:listitem="@layout/contact_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">
        <!--Button
                android:id="@+id/fab_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:clickable="true"
                android:src="@drawable/ic_baseline_add_24"
                android:tint="@color/fab_white"
                android:background="@drawable/round_button_fab"
                app:backgroundTint="@color/light_blue"
                app:borderWidth="0dp"
                app:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:pressedTranslationZ="2dp"
                app:rippleColor="#2B2B2B"
                /-->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/light_blue"
            android:clickable="true"
            android:src="@drawable/ic_baseline_add_24"
            android:theme="@style/fabTheme"
            android:tint="@android:color/white"
            app:borderWidth="0dp"
            app:elevation="1dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:pressedTranslationZ="2dp"
            app:rippleColor="#2B2B2B" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:theme="@style/NavigationTheme">

        <Button
            android:id="@+id/wipeData_btn"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="150dp"
            android:background="@color/red"
            android:drawableStart="@drawable/ic_baseline_delete_24"
            android:text="@string/wipe_data"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/name_of_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:layout_gravity="bottom"
            android:layout_marginLeft="8dp"/>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>